# django_project

project_2/: pyproject.toml
project_2/mysite/mysite/: settings.py  urls.py
