[tool.poetry]
name = "project-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_2"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"


[tool.poetry.group.dev.dependencies]
django = "^4.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
